--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,13 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Georgia';
+  background-color: #2c2e43;
+}
+
+.particles canvas{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
 }
