Implement UI FaceRecognition

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
+  /* className="animated infinite tada delay-5s" */
 }
 
 .App-header {
