--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Georgia';
-  background-color: #2c2e43;
+  background-color: white;
 }
 
 .particles canvas{
