--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,14 @@
+html,body {
+  height: 100%;
+  overflow: hidden;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: 'Georgia';
   background-color: white;
+  height: 100%
 }
 
 .particles canvas{
