--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,14 @@ body {
   padding: 0;
   font-family: 'Georgia';
   background-color: white;
-  height: 100%
+}
+
+#root {
+  height: 100%;
+}
+
+.full-height{
+  height: 100%;
 }
 
 .particles canvas{
