--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,14 @@ body {
   background-color: white;
 }
 
+#root {
+  height: 100%;
+}
+
+.full-height{
+  height: 100%;
+}
+
 .particles canvas{
     position: absolute;
     width: 100%;
